tests/invalid/Template_Invalid_15.whiley
type Point is {int x, int y}

type Ref<T> is { T data }

function f(Ref<Point> rec) -> (int r):
    return rec.data
